<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/restaurant_details_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.restaurantDetails.RestaurantDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:fitsSystemWindows="false"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:statusBarScrim="?attr/colorPrimary">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:fitsSystemWindows="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/restaurant_photos_recyclerview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:listitem="@layout/restaurant_details_photos_recyclerview_item"
                    app:layout_collapseMode="parallax"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/photo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    android:src="@drawable/main_image"
                    android:visibility="gone"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/photo_shimmer_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:shimmer_auto_start="true"
                    app:shimmer_duration="800">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/restaurant_placeholder_bg" />
                </com.facebook.shimmer.ShimmerFrameLayout>

            </FrameLayout>

            <View
                android:id="@+id/shadow"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom|start"
                android:background="@drawable/gradient_background"
                android:visibility="invisible" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_restaurant_detail"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:fitsSystemWindows="false"
                android:theme="@style/ToolbarTheme"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:id="@+id/restaurantDetailsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:paddingVertical="10dp"
                android:paddingStart="16dp"
                android:paddingEnd="75dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="141 Rue Wellingtfsson S, Sherbrooke, QC J1H 5C9" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/callButton"
                    style="@style/RestaurantDetailsMainButtons"
                    android:drawableTop="@drawable/ic_call_24"
                    android:text="@string/call_btn_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/likeButton"
                    app:layout_constraintTop_toTopOf="@id/likeButton" />

                <Button
                    android:id="@+id/likeButton"
                    style="@style/RestaurantDetailsMainButtons"
                    android:drawableTop="@drawable/ic_star_border_24"
                    android:text="@string/like_btn_text"
                    app:layout_constraintLeft_toRightOf="@id/callButton"
                    app:layout_constraintRight_toLeftOf="@id/websiteButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/websiteButton"
                    style="@style/RestaurantDetailsMainButtons"
                    android:drawableTop="@drawable/ic_public_24"
                    android:text="@string/website_btn_text"
                    app:layout_constraintLeft_toRightOf="@id/likeButton"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/likeButton" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.4dp"
                android:layout_gravity="bottom|center"
                android:background="@android:color/darker_gray" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/joining_colleagues"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/colleague_item" />

                <LinearLayout
                    android:id="@+id/empty_colleagues_list_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="40dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/empty_colleagues_list_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textAlignment="center"
                        android:textSize="16sp" />

                </LinearLayout>

            </FrameLayout>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/restaurant_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:scaleType="fitStart"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="bottom|start"
        app:layout_collapseMode="parallax">

        <TextView
            android:id="@+id/restaurant_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="220dp"
            android:paddingEnd="8dp"
            tools:text="@string/Restaurant_Name"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/rate_star_N1"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:visibility="visible"
            app:tint="#FFEB3B"
            android:src="@drawable/ic_star_full_24" />

        <ImageView
            android:id="@+id/rate_star_N2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:visibility="gone"
            app:tint="#FFEB3B"
            android:src="@drawable/ic_star_full_24" />

        <ImageView
            android:id="@+id/rate_star_N3"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:scaleType="fitStart"
            android:visibility="gone"
            app:tint="#FFEB3B"
            android:src="@drawable/ic_star_full_24" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_select_favorite_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/chosen_restaurant"
        android:src="@drawable/ic_check_circle_24_unchecked"
        app:backgroundTint="@color/white"
        app:layout_anchor="@id/appBarLayout"
        app:layout_anchorGravity="end|bottom"
        app:maxImageSize="32dp"
        app:tint="@null" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>