<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/your_lunch"
        android:icon="@drawable/ic_lunch_24"
        android:title="@string/your_lunch_drawer_nav_btn_txt"/>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings_drawer_nav_btn_txt"/>

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/logout_drawer_nav_btn_txt"/>

</menu>